// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`spring-apps-to-aca - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Migrate Spring Boot applications from Azure Spring Apps or any Spring Boot deployment to Azure Container Apps with pre-migration assessment, deployment automation, and cloud-native optimization. WHEN: migrate Spring Boot to Container Apps, move Azure Spring Apps to ACA, modernize Spring applications, containerize Spring Boot, migrate microservices to Azure.",
  "extractedKeywords": [
    "aca",
    "applications",
    "apps",
    "assessment",
    "automation",
    "azure",
    "boot",
    "cloud-native",
    "container",
    "containerize",
    "cosmos",
    "deploy",
    "deployment",
    "from",
    "key vault",
    "mcp",
    "microservices",
    "migrate",
    "modernize",
    "move",
    "optimization",
    "pre-migration",
    "spring",
    "sql",
    "storage",
    "when",
    "with",
  ],
  "name": "spring-apps-to-aca",
}
`;

exports[`spring-apps-to-aca - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "aca",
  "applications",
  "apps",
  "assessment",
  "automation",
  "azure",
  "boot",
  "cloud-native",
  "container",
  "containerize",
  "cosmos",
  "deploy",
  "deployment",
  "from",
  "key vault",
  "mcp",
  "microservices",
  "migrate",
  "modernize",
  "move",
  "optimization",
  "pre-migration",
  "spring",
  "sql",
  "storage",
  "when",
  "with",
]
`;
